# mcp

./: .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  glama.json  pyproject.toml  requirements-test.txt  requirements.txt  server.json
.cursor/rules/: smplkit.mdc
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
.windsurf/rules/: smplkit.md
docs/adrs/: ADR-058-mcp-oauth-onboarding.md
docs/designs/: mcp-oauth-standalone-and-bridge.md
examples/: README.md
examples/daily-digest/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
examples/daily-digest/api/: digest.ts
examples/nightly-cleanup/: README.md  app.py
infra/: Pulumi.production.yaml  Pulumi.yaml  __main__.py  requirements.txt
src/smplkit_mcp/: __init__.py  __main__.py  app.py  audit.py  client.py  config.py  configs.py  environments.py  errors.py  flags.py  jobs_client.py  kinds.py  loggers.py  oauth.py  server.py  tools.py  transform.py  urls.py
static/: landing.html
static/.well-known/: glama.json
tests/: _platform.py  conftest.py  test_acceptance.py  test_audit.py  test_config.py  test_configs.py  test_environments.py  test_errors.py  test_flags.py  test_jobs_client.py  test_kinds.py  test_loggers.py  test_oauth.py  test_server.py  test_tools.py  test_transform.py  test_urls.py
