[project]
name = "smplkit-mcp"
version = "0.1.0"
description = "Agent-native MCP server for smplkit Jobs (ADR-057)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastmcp>=3.4.0,<4.0.0",
  "httpx>=0.28,<0.29",
  "pydantic>=2.11,<3.0",
  "uvicorn[standard]>=0.34,<0.50",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "acceptance: end-to-end tests against a real Jobs service (network + credentials required)",
]
# Unit tests run by default; the acceptance suite is opt-in via `-m acceptance`.
addopts = "-m 'not acceptance'"
